<resources>
    <string name="app_name">MyCoupon</string>
    <string name="mycoupon">MyCoupon</string>
    <string name="coupon_scaduti">Scaduti</string>
    <string name="coupon_attivi">Attivi</string>
    <string name="remove_element_message">Sei sicuro di voler elimanare il coupon selezionato ?</string>
    <string name="yes">Si</string>
    <string name="cancel">No</string>
    <string name="descrizione_coupon">Descrizione coupon</string>
    <string name="nome_azienda">Nome azienda</string>
    <string name="barcode">Barcode</string>
    <string name="qr_code">QR Code</string>
    <string name="scan">Scan</string>
    <string name="msg_errore_parametri">È necessario inserire i parametri richiesti</string>
    <string name="title_error">Errore</string>
    <string name="information">Informazione</string>
    <string name="coupon_aggiunto">Il coupon è stato aggiunto con successo</string>
    <string name="coupon_detail">Dettaglio coupon</string>
    <string name="coupon_utilizzati">Utilizzati</string>
</resources>