<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addCouponToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:title="Aggiunta coupon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <ImageButton
            android:id="@+id/btnAddCoupon"
            android:layout_width="63dp"
            android:layout_height="30dp"
            android:background="@color/blue_grey_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/plus"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCouponToolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewName"
                android:layout_width="369dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:backgroundTint="#000000"
                        android:backgroundTintMode="add"
                        android:gravity="bottom|center_horizontal"
                        android:text="Nome azienda"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center_horizontal"
                        android:hint="Inserisci nome azienda ..."
                        android:maxLines="2"
                        android:textColor="#000000"
                        android:textColorHint="@color/grey_500"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView1"
                        tools:ignore="TouchTargetSizeCheck"
                        tools:layout_editor_absoluteX="131dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDescription"
                android:layout_width="370dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="bottom|center_horizontal"
                        android:text="Descrizione"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center_horizontal"
                        android:hint="Inserisci descrizione ..."
                        android:maxLines="3"
                        android:textColor="#000000"
                        android:textColorHint="@color/grey_500"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        tools:ignore="TouchTargetSizeCheck"
                        tools:layout_editor_absoluteX="131dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTypeCoupon"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/cardViewReusable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="bottom|center_horizontal"
                        android:text="Tipo coupon"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="50px"
                        android:paddingRight="50px"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <RadioButton
                            android:id="@+id/rbBarcode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="#000000"
                            android:minHeight="33dp"
                            android:text="@string/barcode"
                            android:textColor="#000000"
                            android:textSize="16dp"
                            tools:ignore="TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/rbQRCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:buttonTint="#000000"
                            android:minHeight="33dp"
                            android:text="@string/qr_code"
                            android:textColor="#000000"
                            android:textSize="16dp"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCode"
                android:layout_width="370dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewTypeCoupon">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="bottom|center_horizontal"
                        android:text="Codice"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtCode"
                        android:layout_width="150dp"
                        android:layout_height="51dp"
                        android:backgroundTint="@color/black"
                        android:gravity="bottom"
                        android:hint="Inserisci codice ..."
                        android:maxLines="3"
                        android:textColor="#000000"
                        android:textColorHint="@color/grey_500"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.23"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/btnScan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layout_bg2"
                        android:text="@string/scan"
                        android:textColor="#000000"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.69" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewReusable"
                android:layout_width="wrap_content"
                android:layout_height="83dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardViewTypeCoupon"
                app:layout_constraintTop_toBottomOf="@+id/cardViewDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="bottom|center_horizontal"

                        android:paddingLeft="50px"
                        android:paddingRight="50px"
                        android:text="Riutilizzabile"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/reusable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#000000"
                        android:shadowColor="#FFFFFF"
                        android:textColor="#000000"
                        android:textSize="16dp"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDate"
                android:layout_width="374dp"
                android:layout_height="343dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:background="@color/amber_400"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewCode">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center_horizontal"
                        android:text="Data di scadenza
"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.45"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.05" />

                    <Switch
                        android:id="@+id/switchDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.77"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <CalendarView
                        android:id="@+id/txtDate"
                        android:layout_width="336dp"
                        android:layout_height="287dp"
                        android:layout_marginBottom="20dp"
                        android:dateTextAppearance="@style/CalenderViewWeekCustomText"
                        android:scaleX="0.9"
                        android:scaleY="0.9"
                        android:theme="@style/CalenderViewCustom"
                        android:weekDayTextAppearance="@style/CalenderViewDateCustomText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>